# ROS_Test_bot

./: README.md
BadBot_description/: CMakeLists.txt  package.xml
BadBot_description/gazebo/: BadBot_materials.gazebo  BadBot_physics.gazebo  BadBot_plugins.gazebo
BadBot_description/launch/: badbot_empty_gazebo.launch  badbot_home_gazebo.launch  badbot_house.launch.py  badbot_kitchen_gazebo.launch  badbot_library.launch.py  badbot_world.launch.py  controller.launch  controller.yaml  display.launch  gazebo.launch  spawn_badbot.launch.py  urdf.rviz
BadBot_description/maps/: Clg_Library.world  library.world
BadBot_description/meshes/: _left_wheel_axle_1.stl  base_link.stl  caster_wheel_1.stl  caster_wheel_1_1_1.stl  left_shaft_1.stl  left_wheel_1.stl  left_wheel_1_1_1.stl  lidar_1.stl  lidar_v1_1.stl  right_shaft_1.stl  right_wheel_1.stl  right_wheel_axle_1.stl
BadBot_description/models/: BadBot.sdf
BadBot_description/models/badbot/: BadBot.sdf  model.config
BadBot_description/models/house/: model.config  model.sdf
BadBot_description/models/libr_L1/: model.config  model.sdf
BadBot_description/models/libr_L1/Bookshelf/: model.sdf
BadBot_description/urdf/: BadBot.gazebo  BadBot.trans  BadBot.urdf  BadBot.xacro  BadBot_new.urdf  BadBot_old.urdf  BadBot_unarranged.urdf  BadBot_with_package.urdf  materials.xacro
BadBot_description/worlds/: empty_library.world  home.world  house.world
badbot_navigation/: CMakeLists.txt  package.xml
badbot_navigation/launch/: badbot_navigation.launch  badbot_navigation_rpp.launch  badbot_navigation_teb.launch  move_base.launch  move_base_rpp.launch  move_base_teb.launch
badbot_navigation/maps/: library.pgm  library.yaml
badbot_navigation/param/: costmap_common_params.yaml  rpp_planner_params.yaml  teb_planner_params.yaml
badbot_slam/: CMakeLists.txt  package.xml
badbot_slam/launch/: badbot_gmapping.launch  badbot_karto.launch
badbot_slam/maps/: home.yaml
badbot_slam/rviz/: badbot.rviz
badbot_teleop/: CMakeLists.txt  package.xml
badbot_teleop/launch/: badbot_teleop_key.launch
badbot_teleop/src/: badbot_teleop_key.py
