################################################################################
# Set minimum required version of cmake, project name and compile options
################################################################################
cmake_minimum_required(VERSION 3.5)
project(BadBot_description)

if(NOT CMAKE_CXX_STANDARD)
  set(CMAKE_CXX_STANDARD 14)
endif()

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

################################################################################
# Find ament packages and libraries for ament and system dependencies
################################################################################
find_package(ament_cmake REQUIRED)
find_package(urdf REQUIRED)
find_package(rviz2 REQUIRED)
find_package(xacro REQUIRED)
find_package(robot_state_publisher REQUIRED)
#find_package(joint_state_publisher REQUIRED)
#find_package(joint_state_publisher_gui REQUIRED)

################################################################################
# Install
################################################################################
install(DIRECTORY meshes rviz urdf launch worlds models
  DESTINATION share/${PROJECT_NAME}
)

################################################################################
# Macro for ament package
################################################################################
ament_package()
