<?xml version="1.0"?>
<package format="3">
  <name>BadBot_description</name>
  <version>2.1.4</version>
  <description>
    3D models of the BadBot for simulation and visualization
  </description>
  <maintainer email="Mayank@todo.com">Mayank</maintainer>
  <license>Apache 2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>urdf</depend>
  <depend>rviz2</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <!-- <depend>joint_state_publisher_gui</depend> -->
  <depend>xacro</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
